<resources>

    <string name="app_name">GodSim</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_god_sim">GodSim</string>
	<string name="NewGame">New Game</string>
	<string name="PlayGame">Play</string>
	<string name="Multiplayer">Multiplayer</string>
	<string name="QuitGame">Quit Game</string>
	<string name="UserName">User Name</string>
	<string name="EnterPlayerName">Choose Existing Player</string>
	<string name="Password">Password</string>
	<string name="BlankSpace"> </string>
	<string name="Close">Close</string>
	<string name="EnterNewPlayer">or Enter New Player</string>
	<string name="CreateNewPlayer">Create New Player</string>
	<string name="Play">Play</string>
	<string name="SelectPlayer">Select Player</string>
	<string name="PlayerMaintenance">Player Maintenance</string>
	<string name="EnterNewName">Enter New Name</string>
	<string name="DeletePlayer">Delete Player</string>
	<string name="RenamePlayer">Rename Player</string>
	<string name="Gatherers">Gatherers</string>
	<string name="Scholars">Scholars</string>
	<string name="Warriors">Warriors</string>
	
</resources>