<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:padding="6dp" >

    <TextView
        android:id="@+id/lblPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/EnterPlayerName"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <Spinner
        android:id="@+id/maintenanceSpinner"
        android:prompt="@string/SelectPlayer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblPlayer"
        android:background="@color/white"
       	android:layout_marginTop="15dp"
    	android:layout_marginLeft="10dp" /> 

     <TextView
        android:id="@+id/lblNewName"
        android:layout_below="@+id/lblPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/EnterNewName"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
	<EditText
        android:id="@+id/txtNewName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblNewName"
        android:layout_alignLeft="@+id/maintenanceSpinner"
        android:layout_below="@+id/maintenanceSpinner"
        android:background="@color/white"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="18dp" >
        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/DeletePlayerButton"
        style="@style/ButtonText"
        android:background="@drawable/red_button"
        android:layout_above="@+id/RenamePlayerButton"
        android:text="@string/DeletePlayer" />

    <Button
        android:id="@+id/RenamePlayerButton"
        style="@style/ButtonText"
        android:background="@drawable/blue_button"
        android:layout_above="@+id/CloseButton"
        android:text="@string/RenamePlayer" />

    <Button
        android:id="@+id/CloseButton"
        style="@style/ButtonText"
        android:background="@drawable/green_button"
        android:layout_alignParentBottom="true"
        android:text="@string/Close" />

    <TextView
        android:id="@+id/msgBox"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/DeletePlayerButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
