<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	    
    <Button
        android:id="@+id/NewGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewGame" />
         
    <Button
        android:id="@+id/ContinueGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ContinueGame" />
    
    <Button
        android:id="@+id/MultiplayerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Multiplayer" />
        
    <Button
        android:id="@+id/QuitGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuitGame" />

    <TextView
        android:id="@+id/msgBox"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        tools:context=".activity_god_sim" />

</LinearLayout>
